--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 
-TYPEORM_CONNECTION = postgres
-TYPEORM_HOST = localhost
-TYPEORM_PORT = 5432
-TYPEORM_USERNAME = postgres
-TYPEORM_PASSWORD = postgres
-TYPEORM_DATABASE = bank-manage
+POSTGRES_CONNECTION = postgres
+POSTGRES_HOST = postgres
+POSTGRES_PORT = 5432
+POSTGRES_USER = postgres
+POSTGRES_PASSWORD = postgres
+POSTGRES_DB = bank-manage
 PORT = 5000
+CREATE_TRANSACTION_URL = http://localhost:5000/transactions
